--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,48 @@
 	</head>
 	<body ng-app="todo">
 		<div id="main">
+		<section class="nav">
+			<nav class="navbar navbar-default">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="/#/">Todo App</a>
+					</div>
+
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav">
+							<li><a href="/help/">Help</a></li>
+							<li><a href="/Messages/">Messages</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#/">Resource 01</a></li>
+									<li><a href="#/">Resource 02</a></li>
+									<li><a href="#/">Resource 03</a></li>
+									<li><a href="#/">Resource 04</a></li>
+								</ul>
+							</li>
+						</ul>
+						<div class="navbar-form navbar-left" role="search">
+							<form action="#" class="form-group" method="get">
+								<input type="text" name="query" class="form-control" placeholder="Search">
+								<button type="submit" class="btn btn-default">Submit</button>
+							</form>
+						</div>
+						<div class="navbar-right">
+							<ul class="nav navbar-nav">
+								<li><a href="/settings/">Settings</a></li>
+								<li><a href="/logout/">Logout</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</section>
 			<div ng-view></div>
 		</div>
 		<script src="/public/module.js"></script>
